--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -520,7 +520,7 @@
                     .catch(error => console.error('리뷰 추가 실패:', error));
             }
             function toggleCommunity() {
-                const community = document.getElementById('community');
+                /*const community = document.getElementById('community');
                 community.classList.toggle('active');
                 const toggleBtn=document.getElementById('toggle-btn2');
 
@@ -550,7 +550,7 @@
                     'message': message,
                     'username': '익명'  // 사용자 이름 추가 가능
                 }));
-                inputBox.value = '';
+                inputBox.value = '';*/
             }
         </script>
         {% endblock %}
