--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -60,7 +60,7 @@
         <script>
             document.getElementById('keyword').value = localStorage.getItem('search_txt') || '';
         </script>
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{MAP_KEY}}&libraries=services"></script>
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7f990c514b989ac63728873819748d10&&libraries=services"></script>
         <script>
             var markers = [];
             var parkingData = [];
@@ -495,6 +495,9 @@
                             alert('리뷰가 추가되었습니다!');
                             console.log("✅ 리뷰 추가됨:", data);
                             loadReviews(); // 리뷰 목록 새로고침
+
+                            ratingInput.value = "";
+                            contentInput.value = "";
                         }
                     })
                     .catch(error => console.error('리뷰 추가 실패:', error));
