fix: review star 수정

--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -642,7 +642,7 @@
                             const reviewElement = `
                                 <div class="review-item">
                                     <strong>${review.user__username}</strong>
-                                    <span>⭐ ${review.rating}</span>
+                                    <span><i class="ri-star-fill"></i> ${review.rating}</span>
                                     <p>${review.content || ''}</p>
                                 </div>
                             `;
