--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -264,6 +264,10 @@
     border: none;
     border-bottom: 1px solid #789;
     text-align: center;
+}.adjust{
+    background-color: #e9e9e9;
+    border-radius: 22%;
+    padding: 2px;
 }
 .list-way{
     display: flex;
