--- a/templates/qanda_list.html
+++ b/templates/qanda_list.html
@@ -3,10 +3,14 @@
 {% block content %}
     <div class="qanda-container">
         <div class="qanda_container">
-            {% for qna in qna_list %}
-            <a href="{% url 'demos:qna_detail' qna.id %}">{{ qna.title }}</a>
-            {% endfor %}
-            <a href="{% url 'demos:qanda_create'%}">새로운 문의 생성</a>
+            <div class="qna_container">
+                <a href="{% url 'demos:qna' %}"><i class="ri-close-large-line"></i></a>
+            </div>
+                <p class="before-qna">이전 문의</p>
+                {% for qna in qna_list %}
+                    <a href="{% url 'demos:qna_detail' qna.id %}" class="qna-title">{{ qna.title }}  {{ qna.updated_date|date:"y.m.d" }}</a>
+                {% endfor %}
+            <a href="{% url 'demos:qanda_create'%}" class="btn-primary">새로운 문의 생성</a>
         </div>
     </div>
     <footer>
