--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -70,8 +70,8 @@
                     <button class="community-btn" onclick="sendMessage()">전송</button>
                 </div>
             {% endcomment %}
-            </div>
             <button class="off-button" onclick="closeParkingDetail()">닫기</button>
+            </div>
         </div>
         {% endblock %}
 
@@ -83,7 +83,7 @@
         <script>
             document.getElementById('keyword').value = localStorage.getItem('search_txt') || '';
         </script>
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0f059122b64c44eccdc5637bc30e8292&libraries=services"></script>
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{MAP_KEY}}&libraries=services"></script>
         <script>
             var markers = [];
             var parkingData = [];
