[feat]: 가이드, 소개페이지 urls 연결 및 불필요한 url삭제

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,8 @@
             <div id="menu" class="menu">
                 <a href="{% url 'demos:home' %}" >Home</a>
                 <a href="{% url 'demos:introduce' %}">Service</a>
-                <a href="{% url 'demos:home' %}">About Us</a>
-                <a href="{% url 'demos:home' %}">Guide Map</a>
+                <a href="{% url 'demos:aboutus' %}">About Us</a>
+                <a href="{% url 'demos:guidemap' %}">Guide Map</a>
                 <a href="{% url 'demos:qna' %}">Q&A</a>
             </div>
             {% block content %}
