--- a/static/css/style-lyj.css
+++ b/static/css/style-lyj.css
@@ -90,14 +90,8 @@ h1 {
     color: #333;
 }
 h2 {
-    margin-block: 1rem;
     font-size: 2rem;
     font-weight: 900;
-    color: #333;
-}
-h3 {
-    font-size: 1.8rem;
-    font-weight: 500;
     color: #333;
 }
 p{
@@ -458,6 +452,9 @@ h6 {
     font-weight: 700;
     color: #333;
 }
+.FQA {
+    margin-bottom: 2.5rem;
+}
 .FQA p {
     font-size: 1.4rem;
     color: #555;
@@ -466,6 +463,12 @@ h6 {
     font-size: 1.5rem; 
 }
 .upload {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.qna_container2 {
     display: flex;
     flex-direction: column;
     align-items: center;
